# mpnmf

./: .gitignore  LICENSE  README.md  pyproject.toml
mpnmf/: __init__.py  core.py
