[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpnmf"
version = "0.1.2"
description = "Metaprogram discovery via non-negative matrix factorization for single-cell RNA-seq data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Keon Woo Kim", email = "sigma33030@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "anndata>=0.8",
    "scanpy>=1.9",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["single-cell", "nmf", "metaprograms", "scRNA-seq", "transcriptomics"]

[project.urls]
Homepage = "https://github.com/Keon-Woo-Kim/mpnmf"
Repository = "https://github.com/Keon-Woo-Kim/mpnmf"

[tool.setuptools.packages.find]
where = ["."]
include = ["mpnmf*"]
